--- a/index.html
+++ b/index.html
@@ -281,32 +281,32 @@
                 <ul class="client-list list">
                     <li class="client-item"><a class="client-link link" href="">
                             <svg width="104" height="56" class="client-logo-icon">
-                                <use href="./images/companylogo.svg#icon-logo1"></use>
+                                <use href="./images/icons.svg#icon-logo1"></use>
                             </svg>
                         </a></li>
                     <li class="client-item"><a class="client-link link" href="">
                             <svg width="104" height="56" class="client-logo-icon">
-                                <use href="./images/companylogo.svg#icon-logo2"></use>
+                                <use href="./images/icons.svg#icon-logo2"></use>
                             </svg>
                         </a></li>
                     <li class="client-item"><a class="client-link link" href="">
                             <svg width="104" height="56" class="client-logo-icon">
-                                <use href="./images/companylogo.svg#icon-logo3"></use>
+                                <use href="./images/icons.svg#icon-logo3"></use>
                             </svg>
                         </a></li>
                     <li class="client-item"><a class="client-link link" href="">
                             <svg width="104" height="56" class="client-logo-icon">
-                                <use href="./images/companylogo.svg#icon-logo4"></use>
+                                <use href="./images/icons.svg#icon-logo4"></use>
                             </svg>
                         </a></li>
                     <li class="client-item"><a class="client-link link" href="">
                             <svg width="104" height="56" class="client-logo-icon">
-                                <use href="./images/companylogo.svg#icon-logo5"></use>
+                                <use href="./images/icons.svg#icon-logo5"></use>
                             </svg>
                         </a></li>
                     <li class="client-item"><a class="client-link link" href="">
                             <svg width="104" height="56" class="client-logo-icon">
-                                <use href="./images/companylogo.svg#icon-logo6"></use>
+                                <use href="./images/icons.svg#icon-logo6"></use>
                             </svg>
                         </a></li>
                 </ul>
@@ -355,6 +355,16 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-email">
+                <p class="footer-soc-title">Subscribe</p>
+                <label class="footer-label-text" for="user-email"></label>
+                <input class="footer-input" type="text" name="user-email" placeholder="E-mail">
+            </div>
+            <button type="button" class="footer-button">Subscribe
+                <svg width="24" height="24" class="footer-button-icon">
+                    <use href="./images/icons.svg#icon-telega"></use>
+                </svg>
+            </button>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -364,6 +374,42 @@
                     <use href="./images/close.svg#icon-close-icon"></use>
                 </svg>
             </button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form">
+                <div class="modal-field">
+                    <label class="modal-label-text" for="user-name">Name</label>
+                    <div class="input-wrap">
+                        <input class="modal-input" type="text" name="user-name">
+                        <svg width="18" height="18" class="modal-input-icon">
+                            <use href="./images/icons.svg#icon-person-black"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label class="modal-label-text" for="user-phone">Phone</label>
+                    <div class="input-wrap">
+                        <input class="modal-input" type="text" name="user-phone">
+                        <svg width="18" height="24" class="modal-input-icon">
+                            <use href="./images/icons.svg#icon-phone-black"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label class="modal-label-text" for="user-email">Email</label>
+                    <div class="input-wrap">
+                        <input class="modal-input" type="text" name="user-email">
+                        <svg width="18" height="24" class="modal-input-icon">
+                            <use href="./images/icons.svg#icon-email-black"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label class="modal-label-text" for="user-comment">Comment</label>
+                    <textarea class="modal-textarea" id="user-comment" name="user-comment"
+                        placeholder="Text input"></textarea>
+                </div>
+                <button class="modal-button" type="submit">Send</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
