--- a/portfolio.html
+++ b/portfolio.html
@@ -252,14 +252,16 @@
                 </ul>
             </div>
             <div class="footer-email">
-                <p class="footer-soc-title">Subscribe</p>
-                <label class="footer-label-text" for="user-email"></label>
-                <input class="footer-input" type="text" name="user-email" placeholder="E-mail">
-                <button type="button" class="footer-button">Subscribe
-                    <svg width="24" height="24" class="footer-button-icon">
-                        <use href="./images/close.svg#icon-telega"></use>
-                    </svg>
-                </button>
+                <p class="footer-email-title">Subscribe</p>
+                <div class="footer-sub">
+                    <label class="footer-label-text" for="user-email"></label>
+                    <input class="footer-input" type="text" name="user-email" placeholder="E-mail">
+                    <button type="button" class="footer-button">Subscribe
+                        <svg width="24" height="24" class="footer-button-icon">
+                            <use href="./images/icons.svg#icon-telega"></use>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
     </footer>
