--- a/index.html
+++ b/index.html
@@ -356,15 +356,17 @@
                 </ul>
             </div>
             <div class="footer-email">
-                <p class="footer-soc-title">Subscribe</p>
-                <label class="footer-label-text" for="user-email"></label>
-                <input class="footer-input" type="text" name="user-email" placeholder="E-mail">
+                <p class="footer-email-title">Subscribe</p>
+                <div class="footer-sub">
+                    <label class="footer-label-text" for="user-email"></label>
+                    <input class="footer-input" type="text" name="user-email" placeholder="E-mail">
+                    <button type="button" class="footer-button">Subscribe
+                        <svg width="24" height="24" class="footer-button-icon">
+                            <use href="./images/icons.svg#icon-telega"></use>
+                        </svg>
+                    </button>
+                </div>
             </div>
-            <button type="button" class="footer-button">Subscribe
-                <svg width="24" height="24" class="footer-button-icon">
-                    <use href="./images/icons.svg#icon-telega"></use>
-                </svg>
-            </button>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -407,6 +409,18 @@
                     <label class="modal-label-text" for="user-comment">Comment</label>
                     <textarea class="modal-textarea" id="user-comment" name="user-comment"
                         placeholder="Text input"></textarea>
+                </div>
+                <div class="modal-field">
+                    <input class="modal-check visually-hidden" id="privacy" name="user-privacy" type="checkbox"
+                        value="true">
+                    <label for="privacy" class="check-text">
+                        <span>
+                            <svg width="10" height="8" class="check-icon">
+                                <use href="./images/icons.svg#icon-check-box"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the
+                        <a href="" class="privacy-link">Privacy Policy</a></label>
                 </div>
                 <button class="modal-button" type="submit">Send</button>
             </form>
