--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <div class="modal-field">
                     <label class="modal-label-text" for="user-name">Name</label>
                     <div class="input-wrap">
-                        <input class="modal-input" type="text" name="user-name">
+                        <input class="modal-input" type="text" id="user-name" name="user-name">
                         <svg width="18" height="18" class="modal-input-icon">
                             <use href="./images/icons.svg#icon-person-black"></use>
                         </svg>
@@ -390,7 +390,7 @@
                 <div class="modal-field">
                     <label class="modal-label-text" for="user-phone">Phone</label>
                     <div class="input-wrap">
-                        <input class="modal-input" type="text" name="user-phone">
+                        <input class="modal-input" type="text" id="user-phone" name="user-phone">
                         <svg width="18" height="24" class="modal-input-icon">
                             <use href="./images/icons.svg#icon-phone-black"></use>
                         </svg>
@@ -399,7 +399,7 @@
                 <div class="modal-field">
                     <label class="modal-label-text" for="user-email">Email</label>
                     <div class="input-wrap">
-                        <input class="modal-input" type="text" name="user-email">
+                        <input class="modal-input" type="text" id="user-email" name="user-email">
                         <svg width="18" height="24" class="modal-input-icon">
                             <use href="./images/icons.svg#icon-email-black"></use>
                         </svg>
