--- a/portfolio.html
+++ b/portfolio.html
@@ -255,7 +255,7 @@
                 <p class="footer-email-title">Subscribe</p>
                 <div class="footer-sub">
                     <label class="footer-label-text" for="user-email"></label>
-                    <input class="footer-input" type="text" name="user-email" placeholder="E-mail">
+                    <input class="footer-input" type="text" id="user-email" name="user-email" placeholder="E-mail">
                     <button type="button" class="footer-button">Subscribe
                         <svg width="24" height="24" class="footer-button-icon">
                             <use href="./images/icons.svg#icon-telega"></use>
